# OpenGL_Renderer

./: CMakeLists.txt  README.md
include/: drawable.h  quad.h  scene_manager.h  shader_program.h  stone.h
shaders/: stones.frag  stones.vert
src/: main.cpp  quad.cpp  scene_manager.cpp  shader_program.cpp  stone.cpp
